Updating Index File After Rewatching Week 1

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </header>
 
         <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
-            <div class="coontainer">
+            <div class="container">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="nucampNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -51,7 +51,7 @@
         </nav>
 
         <div class="container">
-            <div class="row row-content center">
+            <div class="row row-content align-items-center">
                 <div class="col-sm-4 order-sm-last col-md-3">
                     <h2 class="text-sm-right">Discover & Review</h2>
                 </div>
@@ -62,7 +62,7 @@
                 </div>
             </div>
 
-            <div class="row row-content center">
+            <div class="row row-content align-items-center">
                 <div class="col-sm-4 col-md-3">
                     <h2>Featured Campsites</h2>
                 </div>
@@ -74,7 +74,7 @@
                         Lake is a favorite for fly fishers.</p>
                 </div>
             </div>
-            <div class="row row-content center">
+            <div class="row row-content align-items-center">
                 <div class="col-sm-4 order-sm-last col-md-3">
                     <h2 class="text-sm-right">Our Community Partners</h2>
                 </div>
@@ -99,7 +99,7 @@
                             <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
-                    <div class="col-6 col-sm-5">
+                    <div class="col-6 col-sm-5 text-center">
                         <h5>Social</h5>
                         <a href="http://instagram.com/"> <i class="fa fa-instagram fa-lg"></i>Instagram</a>
                         <a href="http://facebook.com/"> <i class="fa fa-facebook fa-lg"></i>Facebook</a>
