--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
         <!-- Additional CSS must be placed after Bootstrap CSS -->
         <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+        <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
         <link rel="stylesheet" href="css/styles.css" />
         <title>NuCamp: A Better Way To Camp</title>
@@ -31,7 +32,7 @@
 
         <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
             <div class="container">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="nucampNavbar">
+                <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -101,10 +102,10 @@
                     </div>
                     <div class="col-6 col-sm-5 text-center">
                         <h5>Social</h5>
-                        <a href="http://instagram.com/"> <i class="fa fa-instagram fa-lg"></i>Instagram</a>
-                        <a href="http://facebook.com/"> <i class="fa fa-facebook fa-lg"></i>Facebook</a>
-                        <a href="http://twitter.com/"> <i class="fa fa-twitter fa-lg"></i>Twitter</a>
-                        <a href="http://youtube.com/"> <i class="fa fa-youtube fa-lg"></i>YouTube</a>
+                        <a href="http://instagram.com/"> <i class="fa fa-instagram fa-lg"></i></a>
+                        <a href="http://facebook.com/"> <i class="fa fa-facebook fa-lg"></i></a>
+                        <a href="http://twitter.com/"> <i class="fa fa-twitter fa-lg"></i></a>
+                        <a href="http://youtube.com/"> <i class="fa fa-youtube fa-lg"></i></a>
                     </div>
                     <div class="col-sm-4 text-center">
                         <i class="fa fa-phone fa-lg text-primary"></i> 1-206-555-1234<br />
