--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                         <h1>NuCamp</h1>
                         <h2>a better way to camp</h2>
                     </div>
+                    <div class="col-md-4 col-xl-2 mt-4">
+                        <a href="#reserveForm" role="button" class="btn btn-lg btn-info" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /><strong>1-206-555-1234</strong>">Reserve Campsite</a>
+
+                    </div>
                 </div>
             </div>
         </header>
@@ -83,7 +87,7 @@
                 </div>
                 <div class="col">
                     <img class="d-flex mr-3 img-thumbnail float-right" src="img/react-lake-thumb.jpg"
-                    alt="Breadcrumb Trail" />
+                        alt="Breadcrumb Trail" />
                     <h3>React Lake Campground</h3>
                     <p class="d-none, d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on
                         the shores of the pristine React Lake is a favorite for fly fishers.</p>
@@ -106,45 +110,51 @@
                 </div>
             </div>
         </div>
-            <footer>
+        <footer>
 
-                <div class="container">
-                    <div class="row">
+            <div class="container">
+                <div class="row">
 
-                        <div class="col-4 col-sm-2 offset-1 text-center">
-                            <h5>Links</h5>
-                            <ul class="list-unstyled">
-                                <li><a href="#">Home</a></li>
-                                <li><a href="aboutus.html">About</a></li>
-                                <li><a href="#">Sites</a></li>
-                                <li><a href="contactus.html">Contact</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-6 col-sm-5 text-center">
-                            <h5>Social</h5>
-                            <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i
-                                    class="fa fa-instagram"></i></a>
-                            <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i
-                                    class="fa fa-facebook"></i></a>
-                            <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i
-                                    class="fa fa-twitter"></i></a>
-                            <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/"><i
-                                    class="fa fa-youtube"></i></a>
-                        </div>
-                        <div class="col-sm-4 text-center">
-                            <a role="button" class="btn btn-link" href="tel: +12065551234"><i class="fa fa-phone"></i>
-                                1-206-555-1234</a><br />
-                            <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"> <i
-                                    class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
-                            <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
-                            <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-                            <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-                            <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-                        </div>
+                    <div class="col-4 col-sm-2 offset-1 text-center">
+                        <h5>Links</h5>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="aboutus.html">About</a></li>
+                            <li><a href="#">Sites</a></li>
+                            <li><a href="contactus.html">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-6 col-sm-5 text-center">
+                        <h5>Social</h5>
+                        <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i
+                                class="fa fa-instagram"></i></a>
+                        <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i
+                                class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i
+                                class="fa fa-twitter"></i></a>
+                        <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/"><i
+                                class="fa fa-youtube"></i></a>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <a role="button" class="btn btn-link" href="tel: +12065551234"><i class="fa fa-phone"></i>
+                            1-206-555-1234</a><br />
+                        <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"> <i
+                                class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
+                        <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
+                        <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+                        <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+                        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
                     </div>
                 </div>
-            </footer>
+            </div>
+        </footer>
 
+
+        <script>
+            $(function () {
+                $('[data-toggle="tooltip"]').tooltip()
+            })
+        </script>
     </body>
 
 </html>
