--- a/index.html
+++ b/index.html
@@ -186,15 +186,14 @@
                 </div>
                 <div class="row row-content align-items-center">
                     <div class="col-sm-4 col-md-3">
-                        <h2>Featured Campsites</h2>
+                        <h2 class="text-sm-right">Featured Campsites</h2>
                     </div>
                     <div class="col">
                         <img class="d-flex mr-3 img-thumbnail float-right" src="img/react-lake-thumb.jpg"
                             alt="Breadcrumb Trail" />
                         <h3>React Lake Campground</h3>
                         <p class="d-none, d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground
-                            on
-                            the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                            on the shores of the pristine React Lake is a favorite for fly fishers.</p>
                     </div>
                 </div>
                 <div class="row row-content align-items-center">
@@ -215,52 +214,108 @@
                     </div>
                 </div>
             </div>
-            <footer>
 
-                <div class="container">
-                    <div class="row">
-
-                        <div class="col-4 col-sm-2 offset-1 text-center">
-                            <h5>Links</h5>
-                            <ul class="list-unstyled">
-                                <li><a href="#">Home</a></li>
-                                <li><a href="aboutus.html">About</a></li>
-                                <li><a href="#">Sites</a></li>
-                                <li><a href="contactus.html">Contact</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-6 col-sm-5 text-center">
-                            <h5>Social</h5>
-                            <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i
-                                    class="fa fa-instagram"></i></a>
-                            <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i
-                                    class="fa fa-facebook"></i></a>
-                            <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i
-                                    class="fa fa-twitter"></i></a>
-                            <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/"><i
-                                    class="fa fa-youtube"></i></a>
-                        </div>
-                        <div class="col-sm-4 text-center">
-                            <a role="button" class="btn btn-link" href="tel: +12065551234"><i class="fa fa-phone"></i>
-                                1-206-555-1234</a><br />
-                            <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"> <i
-                                    class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
-                            <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
-                            <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-                            <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-                            <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+            <div class="row row-content align-items-center">
+                <div class="col-sm-6 mx-auto">
+                    <div class="card">
+                        <h3 class="card-header bg-color text-white">Reserve a Campsite</h3>
+                        <div class="card-body bg-textbox">
+                            <form id="reserveForm">
+                                <div class="row form-group">
+                                    <label for="numCampers" class="col-md-6 col-form-label text-black">Number of
+                                        Campers</label>
+                                    <div class="col">
+                                        <select class="col-md form-control" name="numCampers" id="numCampers">
+                                            <option value="select">Select...</option>
+                                            <option value="1">1</option>
+                                            <option value="2">2</option>
+                                            <option value="3">3</option>
+                                            <option value="4">4</option>
+                                            <option value="5">5</option>
+                                            <option value="6">6</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <label for="date" class="col-md-6 col-form-label text-black"
+                                        placeholder="date">Date</label>
+                                    <div class="col-md-6">
+                                        <input class="col form-control" type="date" id="date">
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col-md-6">
+                                        <button type="button"
+                                            class="btn btn-light bg-buttoncolor text-white">Search</button>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
-            </footer>
-
-
-            <script>
-                $(function () {
-                    $('[data-toggle="tooltip"]').tooltip()
-                })
-            </script>
+                <div class="col">
+                    <div class="card bg-light mt-3">
+                        <blockquote class="blockquote card-body">
+                            <p class="mb-0">I will not follow where the path may lead, but I will go where there is no
+                                path, and I will leave a trail.</p>
+                            <footer class="blockquote-footer">Muriel Strode,
+                                <cite title="Source Title">"Wind-Wafted Wild Flowers" -
+                                    The Open Court, 1903
+                                </cite>
+                            </footer>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <footer>
+
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-4 col-sm-2 offset-1 text-center">
+                        <h5>Links</h5>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="aboutus.html">About</a></li>
+                            <li><a href="#">Sites</a></li>
+                            <li><a href="contactus.html">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-6 col-sm-5 text-center">
+                        <h5>Social</h5>
+                        <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i
+                                class="fa fa-instagram"></i></a>
+                        <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i
+                                class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i
+                                class="fa fa-twitter"></i></a>
+                        <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/"><i
+                                class="fa fa-youtube"></i></a>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <a role="button" class="btn btn-link" href="tel: +12065551234"><i class="fa fa-phone"></i>
+                            1-206-555-1234</a><br />
+                        <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"> <i
+                                class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
+                        <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
+                        <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+                        <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+                        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+
+        <script>
+            $(function () {
+                $('[data-toggle="tooltip"]').tooltip()
+            })
+        </script>
+
+
     </body>
 
 </html>
