--- a/index.html
+++ b/index.html
@@ -30,9 +30,80 @@
                         <h2>a better way to camp</h2>
                     </div>
                     <div class="col-md-4 col-xl-2 mt-4">
+
+
                         <a href="#reserveForm" role="button" class="btn btn-lg btn-info" data-toggle="tooltip"
                             data-placement="bottom" data-html="true"
                             title="Or call us at <br /><strong>1-206-555-1234</strong>">Reserve Campsite</a>
+
+
+                        <div id="reserveModal" class="modal fade" role="dialog">
+                            <div class="modal-dialog modal-lg" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header bg-info text-white">
+                                        <h3 class="modal-title">Reserve a Campsite</h3>
+                                        <button type="button" class="close" data-dismiss="modal">
+                                            &times;
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="container-fluid">
+                                            <form id="reserveForm">
+                                                <div class="form-group row">
+                                                    <label class="col-sm-6 col-form-label">Number of Campers</label>
+                                                    <div class="col-sm-6">
+                                                        <select class="form-control" name="numCampers" id="numCampers">
+                                                            <option value="" selected disabled hidden>Select...</option>
+                                                            <option value="1">1</option>
+                                                            <option value="2">2</option>
+                                                            <option value="3">3</option>
+                                                            <option value="4">4</option>
+                                                            <option value="5">5</option>
+                                                            <option value="6">6</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row">
+                                                    <label for="date"
+                                                        class="col-12 col-sm-6 col-form-label">Date</label>
+                                                    <div class="col">
+                                                        <input class="form-control" type="date" id="date" name="date"
+                                                            placeholder="date" />
+                                                    </div>
+
+                                                </div>
+                                                <div class="form-group row">
+                                                    <label class="col-12 col-sm-6 col-form-label">Campsite Type</label>
+                                                    <div class="col btn-group btn-group-toggle" data-toggle="buttons">
+                                                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                                            <label class="btn btn-success active">
+                                                                <input type="radio" name="siteType" id="siteTent"
+                                                                    value="tent" autocomplete="off" checked> Tent
+                                                            </label>
+                                                            <label class="btn btn-primary">
+                                                                <input type="radio" name="siteType" id="siteRV"
+                                                                    value="RV" autocomplete="off"> RV
+                                                            </label>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row">
+                                                    <div class="col">
+                                                        <button type="button" class="btn btn-secondary ml-auto"
+                                                            data-dismiss="modal">
+                                                            Cancel
+                                                        </button>
+                                                        <button type="submit" class="btn btn-primary">Search</button>
+
+                                                    </div>
+                                                </div>
+                                            </form>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
@@ -220,12 +291,12 @@
                     <div class="card">
                         <h3 class="card-header bg-color text-white">Reserve a Campsite</h3>
                         <div class="card-body bg-textbox">
-                            <form id="reserveForm">
+                            <form id="reserveCampForm">
                                 <div class="row form-group">
                                     <label for="numCampers" class="col-md-6 col-form-label text-black">Number of
                                         Campers</label>
                                     <div class="col">
-                                        <select class="col-md form-control" name="numCampers" id="numCampers">
+                                        <select class="col-md form-control" name="numCampers" id="numCampersDropdown">
                                             <option value="select">Select...</option>
                                             <option value="1">1</option>
                                             <option value="2">2</option>
@@ -240,7 +311,7 @@
                                     <label for="date" class="col-md-6 col-form-label text-black"
                                         placeholder="date">Date</label>
                                     <div class="col-md-6">
-                                        <input class="col form-control" type="date" id="date">
+                                        <input class="col form-control" type="date" id="dateSelect">
                                     </div>
                                 </div>
                                 <div class="row form-group">
@@ -309,11 +380,7 @@
         </footer>
 
 
-        <script>
-            $(function () {
-                $('[data-toggle="tooltip"]').tooltip()
-            })
-        </script>
+
 
 
     </body>
