--- a/index.html
+++ b/index.html
@@ -235,6 +235,13 @@
                                 <span class="sr-only">Next</span>
                             </a>
 
+
+                            <button class="btn btn-danger btn-sm" id="carouselButton">
+                                <i class="fa fa-pause"></i>
+                            </button>
+
+
+
                         </div>
                     </div>
                 </div>
@@ -374,6 +381,8 @@
                         <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
                         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
                         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+
                     </div>
                 </div>
             </div>
@@ -381,7 +390,7 @@
 
 
 
-
+        <script src="js/scripts.js"></script>
 
     </body>
 
